Add ComponentHolderServerPacket to some packets (#1275)